--- a/Stopwatch.html
+++ b/Stopwatch.html
@@ -6,45 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch-Project</title>
-    <!-- bootstrap icons link -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <!-- bootstrap style sheet link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <!-- google font link -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link href='https://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet'>
 
     <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
     <header>
-       
+       <div class="headerLogo text-center py-4"><img src="/img/o_rings.png" alt="o_ring" height="150px"></div>
     </header>
 
     <section>
        <div class="container">
-            <div class="row border">
-                <div class="col border bg-dark">
-
+            <div class="row">
+                <!-- All the Players -->
+                <div class="col p-5">
+                    <div class="card text-bg-dark">
+                      <table class="table table-hover table-dark text-center">
+                        <tr class="border">
+                          <th scope="col"><img src="/img/worldmap.png" alt="" srcset="" width="40px"></th>
+                          <th scope="col">Player Name</th>
+                          <th scope="col">Time</th>
+                          </tr>
+                  </table>
+                        <table class="tabletable-dark mx-2" id="playerTable"> 
+                        </table>
+                    </div>
                 </div>
-                <div class="col border">
-                    <h2>jhgdjsnd</h2>
+                <!-- Timer -->
+                <div class="col text-center text-bg-dark m-3 rounded p-2">
+                    <h1 class="border" id="timeDisplay"></h1><br>
+                    <h2 class="p-3">Stopwatch</h2>
+                    <div class="wrapper">
+                      <div class="display-1"><span id="seconds">00</span>:<span id="tens">00</span></div><br>
+                      <button class="btn btn-success btn-lg mx-2" id="button-start">Start</button>
+                      <button class="btn btn-danger btn-lg mx-2 disabled" id="button-stop">Stop</button>
+                      <button class="btn btn-warning btn-lg mx-2 disabled" id="button-reset">Reset</button>
+                      <br><br><br>
+                      <img id="showIntro" class="rounded-circle d-none" src="/img/321.gif" alt="" srcset="" width="30%">
+                      <h4 id="winners"></h4>
+                      <div class="display-1" id="gameOver"></div>
+                      </div> 
                 </div>
             </div>
-       </div>
+      </div>
     </section>
+    <!-- Animations -->
+    <footer class="fixed-bottom" id="footerInfo">
 
-    <footer>
     </footer>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
